relm4-macros/tests/compile-fail/pre-view-return.stderr
error[E0308]: mismatched types
  --> tests/compile-fail/pre-view-return.rs:8:1
   |
8  | #[relm4_macros::component]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found struct `__DoNotReturnManually`
   |
note: return type inferred to be `()` here
  --> tests/compile-fail/pre-view-return.rs:20:13
   |
20 |             return;
   |             ^^^^^^
   = note: this error originates in the attribute macro `relm4_macros::component` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
 --> tests/compile-fail/pre-view-return.rs:8:1
  |
8 | #[relm4_macros::component]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
  | |
  | expected struct `__DoNotReturnManually`, found `()`
  | expected due to this
  |
  = note: this error originates in the attribute macro `relm4_macros::component` (in Nightly builds, run with -Z macro-backtrace for more info)
